// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test GitSyncRepoFormStep Should not allow saving form if folder name is not specified 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main modalContainer StyledProps--margin-large"
    style="height: inherit;"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--color StyledProps--color-black"
    >
      gitsync.configureHarnessFolder
    </p>
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main"
        style="width: 60%;"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="StyledProps--font StyledProps--main formBody"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="git-configure"
                  >
                    <svg
                      fill="none"
                      height="18"
                      viewBox="0 0 10 18"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m1.5 0c-0.8236 0-1.5 0.67632-1.5 1.5 0 0.8236 0.6764 1.5 1.5 1.5 0.7208 0 1.328-0.5188 1.4688-1.2h1.5562c-0.05 0.1976-0.1368 0.3916-0.2626 0.5624l1.5188-0.5624h0.0188v-0.0062l1.0812-0.4-2.6188-0.96256c0.1252 0.17426 0.2062 0.36976 0.2564 0.56876h-1.6064c-0.2076-0.58016-0.764-1-1.4124-1zm0 3h-0.4v0.2h0.8v-0.2h-0.4zm7-3c-0.8236 0-1.5 0.67632-1.5 1.5 0 0.685 0.4688 1.2668 1.1 1.4438v0.0562h0.8v-0.0562c0.6312-0.177 1.1-0.7588 1.1-1.4438 0-0.82368-0.6764-1.5-1.5-1.5zm-7 0.8c0.3914 0 0.7 0.3086 0.7 0.7s-0.3086 0.7-0.7 0.7-0.7-0.3086-0.7-0.7 0.3086-0.7 0.7-0.7zm7 0c0.3914 0 0.7 0.3086 0.7 0.7s-0.3086 0.7-0.7 0.7-0.7-0.3086-0.7-0.7 0.3086-0.7 0.7-0.7zm-0.4 2.4v0.2h0.8v-0.2h-0.8zm-7 0.2v0.2h0.8v-0.2h-0.8zm7 0.2v0.2h0.8v-0.2h-0.8zm-7 0.2v0.2h0.8v-0.2h-0.8zm7 0.2v0.2h0.8v-0.2h-0.8zm-7 0.2v0.2h0.8v-0.2h-0.8zm7 0.2v0.2h0.8v-0.2h-0.8zm-7 0.2v0.2h0.8v-0.2h-0.8zm7 0.2v0.2h0.8v-0.2h-0.8zm-7 0.2v0.2h0.8v-0.2h-0.8zm7 0.2v0.2h0.8v-0.2h-0.8zm-7 0.2v0.2h0.8v-0.2h-0.8zm7 0.2v0.2h0.8v-0.2h-0.8zm-7 0.2v0.2h0.8v-0.2h-0.8zm7 0.2v0.2h0.8v-0.2h-0.8zm-7 0.2v0.2h0.8v-0.2h-0.8zm7 0.2v0.2h0.8v-0.2h-0.8zm-7 0.2v0.2h0.8v-0.2h-0.8zm7 0.2v0.2h0.8v-0.2h-0.8zm-7 0.2v0.2h0.8v-0.2h-0.8zm7 0.2v0.2h0.8v-0.2h-0.8zm0.4 0.2c-0.8236 0-1.5 0.6764-1.5 1.5s0.6764 1.5 1.5 1.5c0.03 0 0.0578-0.0044 0.0876-0.0062l0.2748 0.05 0.0126-0.0688v-0.025c0.6438-0.1684 1.125-0.756 1.125-1.45 0-0.8236-0.6764-1.5-1.5-1.5zm-7.4 0v0.1562c-0.6312 0.177-1.1 0.7588-1.1 1.4438s0.4688 1.2668 1.1 1.4438v0.1562h0.8v-0.1562c0.6312-0.177 1.1-0.7588 1.1-1.4438s-0.4688-1.2668-1.1-1.4438v-0.1562h-0.8zm7.4 0.8c0.3914 0 0.7 0.3086 0.7 0.7s-0.3086 0.7-0.7 0.7-0.7-0.3086-0.7-0.7 0.3086-0.7 0.7-0.7zm-7 0.1c0.3914 0 0.7 0.3086 0.7 0.7s-0.3086 0.7-0.7 0.7-0.7-0.3086-0.7-0.7 0.3086-0.7 0.7-0.7zm6.5438 2.1562-0.0062 0.0188-0.0064 0.0126-0.025 0.0748-0.0062 0.0252-0.0124 0.0186 0.7374 0.3062 0.025-0.0436 0.0062-0.0126v-0.0186l0.0438-0.1314 0.0062-0.0124 0.0062-0.0126v-0.0124l-0.5248-0.1312-0.2438-0.0814zm-0.125 0.2876-0.0564 0.1062-0.0124 0.0188v0.0062l0.0312 0.0188 0.6064 0.4562 0.0312-0.0376 0.0188-0.0248 0.0124-0.0252 0.0688-0.1312-0.7-0.3874zm-6.8188 0.0562v0.2h0.8v-0.2h-0.8zm6.6562 0.2-0.0312 0.0312-0.0062 0.0064-0.0938 0.1 0.5688 0.5562 0.1312-0.1376 0.0188-0.0186 0.0186-0.0188 0.0064-0.0064-0.375-0.2812-0.2376-0.2312zm-6.6562 0.2v0.2h0.8v-0.2h-0.8zm6.4062 0.0376-0.1186 0.0936-0.0064 0.0064 0.4438 0.6624 0.0374-0.025 0.0188-0.0126 0.0126-0.0124 0.1186-0.0938-0.5062-0.6186zm-0.2938 0.2124-0.0312 0.0188-0.1124 0.0624 0.3874 0.7 0.1438-0.0812 0.0124-0.0062 0.0188-0.0126 0.025-0.0188-0.4438-0.6624zm-6.1124 0.15v0.2h0.8v-0.2h-0.8zm5.8124 0.0124-0.1812 0.0876 0.3438 0.7188 0.1812-0.0812-0.3438-0.7252zm-0.3436 0.1564-0.1188 0.05-0.0188 0.0062-0.0374 0.0126 0.2812 0.75 0.05-0.0188h0.0062l0.0126-0.0064 0.1312-0.0562-0.3062-0.7374zm-0.3626 0.1374-0.0438 0.0188-0.0186 0.0062-0.1062 0.0376 0.2436 0.7562 0.125-0.0374 0.0126-0.0064h0.0062l0.0626-0.025-0.2814-0.75zm-5.1062 0.0938v0.2h0.8v-0.2h-0.8zm4.7438 0.025-0.1876 0.0626 0.2438 0.7624 0.1876-0.0624-0.2438-0.7626zm-0.3688 0.1188-0.1938 0.0562 0.225 0.7688 0.1938-0.0564-0.225-0.7686zm-0.3874 0.1124-0.1876 0.0562 0.2188 0.7688 0.1936-0.0562-0.2248-0.7688zm-0.3814 0.1126-0.1938 0.0562 0.2252 0.7688 0.1936-0.0562-0.225-0.7688zm-3.6062 0.0312v0.2h0.8v-0.2h-0.8zm3.225 0.0812-0.0874 0.025h-0.0126l-0.1062 0.0376 0.2436 0.7624 0.0938-0.0312 0.0126-0.0062 0.075-0.0188-0.2188-0.7688zm-0.3938 0.125-0.1936 0.0562 0.25 0.7626 0.1874-0.0626-0.2438-0.7562zm-0.4 0.125-0.1874 0.075 0.2812 0.75 0.1874-0.0686-0.2812-0.7564zm-2.4312 0.0688v0.2h0.8v-0.2h-0.8zm2.0438 0.0812-0.175 0.075-0.0064 0.0062h-0.0124l-0.0062 0.0064 0.2562 0.5374 0.075 0.1876 0.0126-0.0062h0.0062l0.1562-0.0626-0.3062-0.7438zm-0.3814 0.175-0.0874 0.0376-0.0126 0.0062-0.0062 0.0062-0.0938 0.0562 0.3876 0.6938 0.075-0.0374 0.0188-0.0126 0.0624-0.0312-0.3438-0.7188zm-1.6624 0.1438v0.2h0.8v-0.2h-0.8zm1.2624 0.075-0.1686 0.1126 0.4438 0.6624 0.1686-0.1124-0.4438-0.6626zm-0.3562 0.2562-0.1062 0.0812v-0.0124h-0.8v0.2h0.8v-0.025l0.4938 0.475 0.0062-0.0124 0.025-0.0252h0.0062l0.0812-0.0624-0.5062-0.6188zm-0.325 0.3-0.0062 0.0126-0.0188 0.0186-0.0186 0.0188-0.0876 0.1188h-0.45v0.2h0.65l0.4124 0.3124 0.1188-0.15-0.2624-0.1936-0.1188-0.1188v-0.05h-0.05l-0.1688-0.1688zm-0.2936 0.4188-0.0626 0.1188-0.0126 0.0188-0.0062 0.0124h-0.2062v0.2h0.5l0.4188 0.175 0.0062-0.0188 0.0126-0.025 0.0062-0.0124 0.0438-0.0812-0.1876-0.1064v-0.1312h-0.2438l-0.2686-0.15zm-0.1876 0.4312v0.0126l-0.0062 0.0124-0.0062 0.0126-0.0188 0.0812h-0.0688v0.2h0.4c-0.8236 0-1.5 0.6764-1.5 1.5s0.6764 1.5 1.5 1.5 1.5-0.6764 1.5-1.5c0-0.6734-0.4536-1.244-1.0688-1.4312v-0.0188l0.0064-0.0188v-0.0124l0.0186-0.075 0.0062-0.0126 0.0064-0.0188-0.0688-0.0186v-0.0938h-0.3438l-0.3562-0.1188zm0.3 1.1188c0.3914 0 0.7 0.3086 0.7 0.7s-0.3086 0.7-0.7 0.7-0.7-0.3086-0.7-0.7 0.3086-0.7 0.7-0.7z"
                        fill="#383946"
                      />
                    </svg>
                  </span>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--margin-top-large StyledProps--margin-bottom-large StyledProps--color StyledProps--color-black"
                  >
                    selectGitProvider
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-medium StyledProps--margin-left-xlarge"
                >
                  <div
                    class="Layout--vertical StyledProps--main cardWrapper"
                  >
                    <div
                      class="bp3-card bp3-interactive bp3-elevation-0 Card--card card selectedCard Card--interactive"
                      data-testid="Github-card"
                      tabindex="0"
                    >
                      <span
                        class="bp3-icon StyledProps--main connectorTypeIcon StyledProps--margin-large StyledProps--inline"
                        data-icon="github-selected"
                      >
                        <svg
                          fill="none"
                          height="40"
                          viewBox="0 0 20 20"
                          width="40"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.97 0C4.464 0 0 4.465 0 9.97c0 4.403 2.875 8.134 6.789 9.48.49.06.673-.245.673-.49v-1.712c-2.753.611-3.364-1.346-3.364-1.346-.428-1.162-1.101-1.468-1.101-1.468-.917-.611.061-.611.061-.611.979.06 1.53 1.04 1.53 1.04.917 1.528 2.323 1.1 2.874.856a2.13 2.13 0 01.611-1.346c-2.201-.244-4.526-1.1-4.526-4.954 0-1.101.367-1.957 1.04-2.691-.061-.184-.428-1.223.122-2.569 0 0 .857-.245 2.753 1.04.795-.245 1.651-.306 2.507-.306.857 0 1.713.122 2.508.306 1.896-1.285 2.752-1.04 2.752-1.04.55 1.346.184 2.385.123 2.63a3.956 3.956 0 011.04 2.691c0 3.853-2.325 4.649-4.527 4.893.367.306.673.918.673 1.835v2.752c0 .245.184.55.673.49A9.98 9.98 0 0020 9.97C19.939 4.464 15.474 0 9.97 0z"
                            fill="#3E7BFA"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-blue500"
                    >
                      GitHub
                    </p>
                  </div>
                </div>
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="folder-upload"
                  >
                    <svg
                      height="18"
                      viewBox="0 0 16 16"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m14.372 13.241h-12.745c-0.88276 0-1.6276-0.7173-1.6276-1.6276v-11.062c0-0.30345 0.24828-0.55172 0.55172-0.55172h4.1379c0.1931 0 0.3862 0.11034 0.46896 0.27586l1.6552 2.7586h7.5586c0.8828 0 1.6276 0.71724 1.6276 1.6276v6.9517c0 0.9103-0.7172 1.6276-1.6276 1.6276zm-13.269-12.138v10.51c0 0.2759 0.22069 0.5241 0.52414 0.5241h12.745c0.2759 0 0.5242-0.2207 0.5242-0.5241v-6.9517c0-0.27586-0.2207-0.52414-0.5242-0.52414h-7.8621c-0.1931 0-0.3862-0.11034-0.46896-0.27586l-1.6552-2.7586h-3.2828z"
                        fill="#383946"
                      />
                      <path
                        d="m9.9308 10.484c-0.13793 0-0.27586-0.0552-0.38621-0.1655l-1.5448-1.5448-1.5448 1.5448c-0.22069 0.2207-0.55173 0.2207-0.77241 0-0.22069-0.2207-0.22069-0.55174 0-0.77243l1.931-1.931c0.22069-0.22069 0.57931-0.22069 0.77241 0l1.9311 1.931c0.2207 0.22069 0.2207 0.55173 0 0.77243-0.1104 0.1103-0.2483 0.1655-0.38624 0.1655z"
                        fill="#383946"
                      />
                      <path
                        d="m8.0001 15.448c-0.30345 0-0.55173-0.2483-0.55173-0.5517v-6.8138c0-0.30344 0.24828-0.55172 0.55173-0.55172s0.55172 0.24828 0.55172 0.55172v6.8138c0 0.3034-0.24827 0.5517-0.55172 0.5517z"
                        fill="#383946"
                      />
                    </svg>
                  </span>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--margin-top-large StyledProps--margin-bottom-large StyledProps--color StyledProps--color-black"
                  >
                    gitsync.folderDetails
                  </p>
                </div>
                <div
                  class="Layout--vertical StyledProps--main StyledProps--padding-left-xlarge"
                >
                  <div
                    class="StyledProps--font StyledProps--main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer TextInput--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <div
                          class="Text--withDocsTooltip"
                          data-tooltip-id="gitSyncRepoForm_identifier"
                        >
                          <p
                            class="StyledProps--font StyledProps--main"
                          >
                            Id
                          </p>
                        </div>
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                              tabindex="0"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              />
                            </div>
                          </span>
                        </span>
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Edit"
                          style="vertical-align: middle; cursor: pointer;"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="gitSyncRepoForm_name"
                          >
                            common.git.selectRepoLabel
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              placeholder="common.namePlaceholder"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="bp3-form-group"
                    data-id="null-1"
                  >
                    <label
                      class="bp3-label"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="gitSyncRepoForm_gitConnector"
                      >
                        selectGitConnectorTypeLabel
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                        data-testid="cr-field-gitConnector"
                        style="width: 350px;"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          <span
                            class="placeholder"
                          >
                            select
                          </span>
                        </span>
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start"
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <div
                        class="bp3-form-group noSpacing"
                        data-id="repo-2"
                      >
                        <label
                          class="bp3-label"
                          for="repo"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="gitSyncRepoForm_repo"
                          >
                            common.repositoryName
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="repo"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--padding-top-xsmall StyledProps--padding-bottom-medium StyledProps--color StyledProps--color-grey250"
                        style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
                        title=""
                      >
                        
                      </p>
                    </div>
                  </div>
                  <div
                    class="bp3-form-group placeholder"
                    data-id="rootfolder-3"
                  >
                    <label
                      class="bp3-label"
                      for="rootfolder"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="gitSyncRepoForm_rootfolder"
                      >
                        gitsync.selectHarnessFolder
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="rootfolder"
                          placeholder="/folder1/folder2"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-top-xsmall StyledProps--padding-bottom-medium StyledProps--color StyledProps--color-grey250"
                    style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
                    title="/.harness/"
                  >
                    /.harness/
                  </p>
                  <div
                    class="Layout--horizontal StyledProps--main"
                  >
                    <div
                      class="bp3-form-group"
                      data-id="branch-4"
                    >
                      <label
                        class="bp3-label"
                        for="branch"
                      >
                        <span
                          class="Tooltip--acenter"
                          data-tooltip-id="gitSyncRepoForm_branch"
                        >
                          gitsync.selectDefaultBranch
                        </span>
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-popover-wrapper Select--main bp3-fill"
                        >
                          <div
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-input-group"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="branch"
                                placeholder="- Select -"
                                style="padding-right: 0px;"
                                type="text"
                                value=""
                              />
                              <span
                                class="bp3-input-action"
                              >
                                <span
                                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                  icon="chevron-down"
                                >
                                  <svg
                                    data-icon="chevron-down"
                                    height="14"
                                    viewBox="0 0 16 16"
                                    width="14"
                                  >
                                    <desc>
                                      chevron-down
                                    </desc>
                                    <path
                                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-top-small StyledProps--padding-left-xlarge"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main formButton StyledProps--intent-primary Button--with-current-color"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    save
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main formButton StyledProps--margin-left-medium Button--with-current-color"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    cancel
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
        style="width: 40%;"
      >
        <div
          class="Layout--vertical StyledProps--main helpText StyledProps--background-grey100 StyledProps--padding-xxlarge"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--padding-bottom-xxxlarge"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="help"
            >
              <svg
                fill="none"
                height="28"
                width="28"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M.488 8.325a3.694 3.694 0 015.225 0 3.694 3.694 0 015.224 0 3.694 3.694 0 015.225 0 7.837 7.837 0 10-15.674 0z"
                  fill="#ADEEFA"
                />
                <path
                  d="M8.325.488c-1.443 0-2.613 3.508-2.613 7.836v.001a3.694 3.694 0 015.227-.001c0-4.328-1.17-7.836-2.614-7.836z"
                  fill="#FF7D97"
                />
                <path
                  d="M4.81 13.574h7.03c1.08 0 1.954.875 1.954 1.953v7.032a1.953 1.953 0 01-1.953 1.953H4.81a1.953 1.953 0 01-1.954-1.953v-7.032c0-1.078.875-1.953 1.954-1.953z"
                  fill="#FFEC80"
                />
                <path
                  d="M6.373 17.385v-3.81h3.906v3.81l-1.953-1.4-1.953 1.4z"
                  fill="#fff"
                />
                <path
                  d="M16.65 8.325C16.65 3.735 12.916 0 8.325 0 3.735 0 0 3.735 0 8.325c0 .153.071.293.187.384l5.584 4.377H4.81a2.444 2.444 0 00-2.442 2.441v1.319a.488.488 0 00.977 0v-1.319c0-.807.657-1.464 1.465-1.464h1.074v3.322a.488.488 0 00.773.397l1.669-1.196 1.669 1.196a.488.488 0 00.772-.397v-3.323h1.074c.808 0 1.465.658 1.465 1.465v7.032c0 .807-.657 1.464-1.465 1.464H4.81a1.466 1.466 0 01-1.465-1.464V21.24a.488.488 0 00-.977 0v1.319A2.444 2.444 0 004.81 25h7.03a2.444 2.444 0 002.442-2.441v-7.032a2.444 2.444 0 00-2.441-2.441h-.962l5.584-4.377a.488.488 0 00.187-.384zm-1.048-1.033a4.199 4.199 0 00-4.195.054c-.072-1.776-.339-3.423-.77-4.717-.206-.617-.429-1.095-.657-1.464a7.368 7.368 0 015.621 6.127zM8.325.977c.337 0 .902.513 1.385 1.961.399 1.195.647 2.725.72 4.385a4.184 4.184 0 00-4.209 0c.072-1.66.32-3.19.72-4.385C7.422 1.49 7.987.977 8.324.977zm2.025 7.475l-2.024 4.613L6.3 8.451a3.212 3.212 0 014.05 0zm-5.045.159l1.918 4.372-5.96-4.671a3.21 3.21 0 014.042.299zm6.043-.002a3.21 3.21 0 014.04-.297l-5.959 4.67 1.919-4.373zM6.67 1.165c-.228.369-.45.847-.656 1.464-.432 1.294-.699 2.941-.771 4.717a4.199 4.199 0 00-4.194-.054A7.368 7.368 0 016.67 1.165zm3.12 15.27l-1.18-.847a.488.488 0 00-.569 0l-1.18.846v-2.372h2.93v2.372z"
                  fill="#6B6D85"
                />
                <path
                  d="M11.646 22.64a.488.488 0 100-.976h-1.514a.488.488 0 000 .976h1.514zm-8.79-3.109a.492.492 0 00.489-.488.492.492 0 00-.489-.488.492.492 0 00-.488.488.492.492 0 00.488.488z"
                  fill="#6B6D85"
                />
              </svg>
            </span>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey700"
              >
                gitsync.harnessFolderHeader
              </p>
              <p
                class="StyledProps--font StyledProps--main"
              >
                 
                gitsync.harnessFolderText
              </p>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="help"
            >
              <svg
                fill="none"
                height="28"
                width="28"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M.488 8.325a3.694 3.694 0 015.225 0 3.694 3.694 0 015.224 0 3.694 3.694 0 015.225 0 7.837 7.837 0 10-15.674 0z"
                  fill="#ADEEFA"
                />
                <path
                  d="M8.325.488c-1.443 0-2.613 3.508-2.613 7.836v.001a3.694 3.694 0 015.227-.001c0-4.328-1.17-7.836-2.614-7.836z"
                  fill="#FF7D97"
                />
                <path
                  d="M4.81 13.574h7.03c1.08 0 1.954.875 1.954 1.953v7.032a1.953 1.953 0 01-1.953 1.953H4.81a1.953 1.953 0 01-1.954-1.953v-7.032c0-1.078.875-1.953 1.954-1.953z"
                  fill="#FFEC80"
                />
                <path
                  d="M6.373 17.385v-3.81h3.906v3.81l-1.953-1.4-1.953 1.4z"
                  fill="#fff"
                />
                <path
                  d="M16.65 8.325C16.65 3.735 12.916 0 8.325 0 3.735 0 0 3.735 0 8.325c0 .153.071.293.187.384l5.584 4.377H4.81a2.444 2.444 0 00-2.442 2.441v1.319a.488.488 0 00.977 0v-1.319c0-.807.657-1.464 1.465-1.464h1.074v3.322a.488.488 0 00.773.397l1.669-1.196 1.669 1.196a.488.488 0 00.772-.397v-3.323h1.074c.808 0 1.465.658 1.465 1.465v7.032c0 .807-.657 1.464-1.465 1.464H4.81a1.466 1.466 0 01-1.465-1.464V21.24a.488.488 0 00-.977 0v1.319A2.444 2.444 0 004.81 25h7.03a2.444 2.444 0 002.442-2.441v-7.032a2.444 2.444 0 00-2.441-2.441h-.962l5.584-4.377a.488.488 0 00.187-.384zm-1.048-1.033a4.199 4.199 0 00-4.195.054c-.072-1.776-.339-3.423-.77-4.717-.206-.617-.429-1.095-.657-1.464a7.368 7.368 0 015.621 6.127zM8.325.977c.337 0 .902.513 1.385 1.961.399 1.195.647 2.725.72 4.385a4.184 4.184 0 00-4.209 0c.072-1.66.32-3.19.72-4.385C7.422 1.49 7.987.977 8.324.977zm2.025 7.475l-2.024 4.613L6.3 8.451a3.212 3.212 0 014.05 0zm-5.045.159l1.918 4.372-5.96-4.671a3.21 3.21 0 014.042.299zm6.043-.002a3.21 3.21 0 014.04-.297l-5.959 4.67 1.919-4.373zM6.67 1.165c-.228.369-.45.847-.656 1.464-.432 1.294-.699 2.941-.771 4.717a4.199 4.199 0 00-4.194-.054A7.368 7.368 0 016.67 1.165zm3.12 15.27l-1.18-.847a.488.488 0 00-.569 0l-1.18.846v-2.372h2.93v2.372z"
                  fill="#6B6D85"
                />
                <path
                  d="M11.646 22.64a.488.488 0 100-.976h-1.514a.488.488 0 000 .976h1.514zm-8.79-3.109a.492.492 0 00.489-.488.492.492 0 00-.489-.488.492.492 0 00-.488.488.492.492 0 00.488.488z"
                  fill="#6B6D85"
                />
              </svg>
            </span>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey700"
              >
                connecectorHelpHeader
              </p>
              <p
                class="StyledProps--font StyledProps--main"
              >
                 
                connecectorHelpText
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test GitSyncRepoFormStep Should not allow saving form if folder name is not specified 2`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main modalContainer StyledProps--margin-large"
    style="height: inherit;"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--color StyledProps--color-black"
    >
      gitsync.configureHarnessFolder
    </p>
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main"
        style="width: 60%;"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="StyledProps--font StyledProps--main formBody"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="git-configure"
                  >
                    <svg
                      fill="none"
                      height="18"
                      viewBox="0 0 10 18"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m1.5 0c-0.8236 0-1.5 0.67632-1.5 1.5 0 0.8236 0.6764 1.5 1.5 1.5 0.7208 0 1.328-0.5188 1.4688-1.2h1.5562c-0.05 0.1976-0.1368 0.3916-0.2626 0.5624l1.5188-0.5624h0.0188v-0.0062l1.0812-0.4-2.6188-0.96256c0.1252 0.17426 0.2062 0.36976 0.2564 0.56876h-1.6064c-0.2076-0.58016-0.764-1-1.4124-1zm0 3h-0.4v0.2h0.8v-0.2h-0.4zm7-3c-0.8236 0-1.5 0.67632-1.5 1.5 0 0.685 0.4688 1.2668 1.1 1.4438v0.0562h0.8v-0.0562c0.6312-0.177 1.1-0.7588 1.1-1.4438 0-0.82368-0.6764-1.5-1.5-1.5zm-7 0.8c0.3914 0 0.7 0.3086 0.7 0.7s-0.3086 0.7-0.7 0.7-0.7-0.3086-0.7-0.7 0.3086-0.7 0.7-0.7zm7 0c0.3914 0 0.7 0.3086 0.7 0.7s-0.3086 0.7-0.7 0.7-0.7-0.3086-0.7-0.7 0.3086-0.7 0.7-0.7zm-0.4 2.4v0.2h0.8v-0.2h-0.8zm-7 0.2v0.2h0.8v-0.2h-0.8zm7 0.2v0.2h0.8v-0.2h-0.8zm-7 0.2v0.2h0.8v-0.2h-0.8zm7 0.2v0.2h0.8v-0.2h-0.8zm-7 0.2v0.2h0.8v-0.2h-0.8zm7 0.2v0.2h0.8v-0.2h-0.8zm-7 0.2v0.2h0.8v-0.2h-0.8zm7 0.2v0.2h0.8v-0.2h-0.8zm-7 0.2v0.2h0.8v-0.2h-0.8zm7 0.2v0.2h0.8v-0.2h-0.8zm-7 0.2v0.2h0.8v-0.2h-0.8zm7 0.2v0.2h0.8v-0.2h-0.8zm-7 0.2v0.2h0.8v-0.2h-0.8zm7 0.2v0.2h0.8v-0.2h-0.8zm-7 0.2v0.2h0.8v-0.2h-0.8zm7 0.2v0.2h0.8v-0.2h-0.8zm-7 0.2v0.2h0.8v-0.2h-0.8zm7 0.2v0.2h0.8v-0.2h-0.8zm-7 0.2v0.2h0.8v-0.2h-0.8zm7 0.2v0.2h0.8v-0.2h-0.8zm0.4 0.2c-0.8236 0-1.5 0.6764-1.5 1.5s0.6764 1.5 1.5 1.5c0.03 0 0.0578-0.0044 0.0876-0.0062l0.2748 0.05 0.0126-0.0688v-0.025c0.6438-0.1684 1.125-0.756 1.125-1.45 0-0.8236-0.6764-1.5-1.5-1.5zm-7.4 0v0.1562c-0.6312 0.177-1.1 0.7588-1.1 1.4438s0.4688 1.2668 1.1 1.4438v0.1562h0.8v-0.1562c0.6312-0.177 1.1-0.7588 1.1-1.4438s-0.4688-1.2668-1.1-1.4438v-0.1562h-0.8zm7.4 0.8c0.3914 0 0.7 0.3086 0.7 0.7s-0.3086 0.7-0.7 0.7-0.7-0.3086-0.7-0.7 0.3086-0.7 0.7-0.7zm-7 0.1c0.3914 0 0.7 0.3086 0.7 0.7s-0.3086 0.7-0.7 0.7-0.7-0.3086-0.7-0.7 0.3086-0.7 0.7-0.7zm6.5438 2.1562-0.0062 0.0188-0.0064 0.0126-0.025 0.0748-0.0062 0.0252-0.0124 0.0186 0.7374 0.3062 0.025-0.0436 0.0062-0.0126v-0.0186l0.0438-0.1314 0.0062-0.0124 0.0062-0.0126v-0.0124l-0.5248-0.1312-0.2438-0.0814zm-0.125 0.2876-0.0564 0.1062-0.0124 0.0188v0.0062l0.0312 0.0188 0.6064 0.4562 0.0312-0.0376 0.0188-0.0248 0.0124-0.0252 0.0688-0.1312-0.7-0.3874zm-6.8188 0.0562v0.2h0.8v-0.2h-0.8zm6.6562 0.2-0.0312 0.0312-0.0062 0.0064-0.0938 0.1 0.5688 0.5562 0.1312-0.1376 0.0188-0.0186 0.0186-0.0188 0.0064-0.0064-0.375-0.2812-0.2376-0.2312zm-6.6562 0.2v0.2h0.8v-0.2h-0.8zm6.4062 0.0376-0.1186 0.0936-0.0064 0.0064 0.4438 0.6624 0.0374-0.025 0.0188-0.0126 0.0126-0.0124 0.1186-0.0938-0.5062-0.6186zm-0.2938 0.2124-0.0312 0.0188-0.1124 0.0624 0.3874 0.7 0.1438-0.0812 0.0124-0.0062 0.0188-0.0126 0.025-0.0188-0.4438-0.6624zm-6.1124 0.15v0.2h0.8v-0.2h-0.8zm5.8124 0.0124-0.1812 0.0876 0.3438 0.7188 0.1812-0.0812-0.3438-0.7252zm-0.3436 0.1564-0.1188 0.05-0.0188 0.0062-0.0374 0.0126 0.2812 0.75 0.05-0.0188h0.0062l0.0126-0.0064 0.1312-0.0562-0.3062-0.7374zm-0.3626 0.1374-0.0438 0.0188-0.0186 0.0062-0.1062 0.0376 0.2436 0.7562 0.125-0.0374 0.0126-0.0064h0.0062l0.0626-0.025-0.2814-0.75zm-5.1062 0.0938v0.2h0.8v-0.2h-0.8zm4.7438 0.025-0.1876 0.0626 0.2438 0.7624 0.1876-0.0624-0.2438-0.7626zm-0.3688 0.1188-0.1938 0.0562 0.225 0.7688 0.1938-0.0564-0.225-0.7686zm-0.3874 0.1124-0.1876 0.0562 0.2188 0.7688 0.1936-0.0562-0.2248-0.7688zm-0.3814 0.1126-0.1938 0.0562 0.2252 0.7688 0.1936-0.0562-0.225-0.7688zm-3.6062 0.0312v0.2h0.8v-0.2h-0.8zm3.225 0.0812-0.0874 0.025h-0.0126l-0.1062 0.0376 0.2436 0.7624 0.0938-0.0312 0.0126-0.0062 0.075-0.0188-0.2188-0.7688zm-0.3938 0.125-0.1936 0.0562 0.25 0.7626 0.1874-0.0626-0.2438-0.7562zm-0.4 0.125-0.1874 0.075 0.2812 0.75 0.1874-0.0686-0.2812-0.7564zm-2.4312 0.0688v0.2h0.8v-0.2h-0.8zm2.0438 0.0812-0.175 0.075-0.0064 0.0062h-0.0124l-0.0062 0.0064 0.2562 0.5374 0.075 0.1876 0.0126-0.0062h0.0062l0.1562-0.0626-0.3062-0.7438zm-0.3814 0.175-0.0874 0.0376-0.0126 0.0062-0.0062 0.0062-0.0938 0.0562 0.3876 0.6938 0.075-0.0374 0.0188-0.0126 0.0624-0.0312-0.3438-0.7188zm-1.6624 0.1438v0.2h0.8v-0.2h-0.8zm1.2624 0.075-0.1686 0.1126 0.4438 0.6624 0.1686-0.1124-0.4438-0.6626zm-0.3562 0.2562-0.1062 0.0812v-0.0124h-0.8v0.2h0.8v-0.025l0.4938 0.475 0.0062-0.0124 0.025-0.0252h0.0062l0.0812-0.0624-0.5062-0.6188zm-0.325 0.3-0.0062 0.0126-0.0188 0.0186-0.0186 0.0188-0.0876 0.1188h-0.45v0.2h0.65l0.4124 0.3124 0.1188-0.15-0.2624-0.1936-0.1188-0.1188v-0.05h-0.05l-0.1688-0.1688zm-0.2936 0.4188-0.0626 0.1188-0.0126 0.0188-0.0062 0.0124h-0.2062v0.2h0.5l0.4188 0.175 0.0062-0.0188 0.0126-0.025 0.0062-0.0124 0.0438-0.0812-0.1876-0.1064v-0.1312h-0.2438l-0.2686-0.15zm-0.1876 0.4312v0.0126l-0.0062 0.0124-0.0062 0.0126-0.0188 0.0812h-0.0688v0.2h0.4c-0.8236 0-1.5 0.6764-1.5 1.5s0.6764 1.5 1.5 1.5 1.5-0.6764 1.5-1.5c0-0.6734-0.4536-1.244-1.0688-1.4312v-0.0188l0.0064-0.0188v-0.0124l0.0186-0.075 0.0062-0.0126 0.0064-0.0188-0.0688-0.0186v-0.0938h-0.3438l-0.3562-0.1188zm0.3 1.1188c0.3914 0 0.7 0.3086 0.7 0.7s-0.3086 0.7-0.7 0.7-0.7-0.3086-0.7-0.7 0.3086-0.7 0.7-0.7z"
                        fill="#383946"
                      />
                    </svg>
                  </span>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--margin-top-large StyledProps--margin-bottom-large StyledProps--color StyledProps--color-black"
                  >
                    selectGitProvider
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-medium StyledProps--margin-left-xlarge"
                >
                  <div
                    class="Layout--vertical StyledProps--main cardWrapper"
                  >
                    <div
                      class="bp3-card bp3-interactive bp3-elevation-0 Card--card card selectedCard Card--interactive"
                      data-testid="Github-card"
                      tabindex="0"
                    >
                      <span
                        class="bp3-icon StyledProps--main connectorTypeIcon StyledProps--margin-large StyledProps--inline"
                        data-icon="github-selected"
                      >
                        <svg
                          fill="none"
                          height="40"
                          viewBox="0 0 20 20"
                          width="40"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.97 0C4.464 0 0 4.465 0 9.97c0 4.403 2.875 8.134 6.789 9.48.49.06.673-.245.673-.49v-1.712c-2.753.611-3.364-1.346-3.364-1.346-.428-1.162-1.101-1.468-1.101-1.468-.917-.611.061-.611.061-.611.979.06 1.53 1.04 1.53 1.04.917 1.528 2.323 1.1 2.874.856a2.13 2.13 0 01.611-1.346c-2.201-.244-4.526-1.1-4.526-4.954 0-1.101.367-1.957 1.04-2.691-.061-.184-.428-1.223.122-2.569 0 0 .857-.245 2.753 1.04.795-.245 1.651-.306 2.507-.306.857 0 1.713.122 2.508.306 1.896-1.285 2.752-1.04 2.752-1.04.55 1.346.184 2.385.123 2.63a3.956 3.956 0 011.04 2.691c0 3.853-2.325 4.649-4.527 4.893.367.306.673.918.673 1.835v2.752c0 .245.184.55.673.49A9.98 9.98 0 0020 9.97C19.939 4.464 15.474 0 9.97 0z"
                            fill="#3E7BFA"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-blue500"
                    >
                      GitHub
                    </p>
                  </div>
                </div>
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="folder-upload"
                  >
                    <svg
                      height="18"
                      viewBox="0 0 16 16"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m14.372 13.241h-12.745c-0.88276 0-1.6276-0.7173-1.6276-1.6276v-11.062c0-0.30345 0.24828-0.55172 0.55172-0.55172h4.1379c0.1931 0 0.3862 0.11034 0.46896 0.27586l1.6552 2.7586h7.5586c0.8828 0 1.6276 0.71724 1.6276 1.6276v6.9517c0 0.9103-0.7172 1.6276-1.6276 1.6276zm-13.269-12.138v10.51c0 0.2759 0.22069 0.5241 0.52414 0.5241h12.745c0.2759 0 0.5242-0.2207 0.5242-0.5241v-6.9517c0-0.27586-0.2207-0.52414-0.5242-0.52414h-7.8621c-0.1931 0-0.3862-0.11034-0.46896-0.27586l-1.6552-2.7586h-3.2828z"
                        fill="#383946"
                      />
                      <path
                        d="m9.9308 10.484c-0.13793 0-0.27586-0.0552-0.38621-0.1655l-1.5448-1.5448-1.5448 1.5448c-0.22069 0.2207-0.55173 0.2207-0.77241 0-0.22069-0.2207-0.22069-0.55174 0-0.77243l1.931-1.931c0.22069-0.22069 0.57931-0.22069 0.77241 0l1.9311 1.931c0.2207 0.22069 0.2207 0.55173 0 0.77243-0.1104 0.1103-0.2483 0.1655-0.38624 0.1655z"
                        fill="#383946"
                      />
                      <path
                        d="m8.0001 15.448c-0.30345 0-0.55173-0.2483-0.55173-0.5517v-6.8138c0-0.30344 0.24828-0.55172 0.55173-0.55172s0.55172 0.24828 0.55172 0.55172v6.8138c0 0.3034-0.24827 0.5517-0.55172 0.5517z"
                        fill="#383946"
                      />
                    </svg>
                  </span>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--margin-top-large StyledProps--margin-bottom-large StyledProps--color StyledProps--color-black"
                  >
                    gitsync.folderDetails
                  </p>
                </div>
                <div
                  class="Layout--vertical StyledProps--main StyledProps--padding-left-xlarge"
                >
                  <div
                    class="StyledProps--font StyledProps--main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer TextInput--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <div
                          class="Text--withDocsTooltip"
                          data-tooltip-id="gitSyncRepoForm_identifier"
                        >
                          <p
                            class="StyledProps--font StyledProps--main"
                          >
                            Id
                          </p>
                        </div>
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                              tabindex="0"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              />
                            </div>
                          </span>
                        </span>
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Edit"
                          style="vertical-align: middle; cursor: pointer;"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group bp3-intent-danger"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="gitSyncRepoForm_name"
                          >
                            common.git.selectRepoLabel
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group bp3-intent-danger"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              placeholder="common.namePlaceholder"
                              type="text"
                              value=""
                            />
                          </div>
                          <div
                            class="bp3-form-helper-text"
                          >
                            <div
                              class="FormError--errorDiv"
                              data-name="name"
                            >
                              <span
                                class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                                data-icon="circle-cross"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 13 13"
                                  width="12"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M0.166687 6.5013C0.166687 9.99911 3.00222 12.8346 6.50002 12.8346C9.99782 12.8346 12.8334 9.99911 12.8334 6.5013C12.8334 3.0035 9.99782 0.167969 6.50002 0.167969C3.00222 0.167969 0.166687 3.0035 0.166687 6.5013ZM4.23841 3.498L6.49799 5.76096L8.76198 3.49767C9.25705 3.00275 9.99831 3.74646 9.50325 4.24137L7.23992 6.504L9.49411 8.76157C9.98873 9.25693 9.2468 9.99996 8.75218 9.5046L6.49732 7.24638L4.23807 9.50494C3.74301 9.99985 3.00174 9.25615 3.49681 8.76123L5.75539 6.50334L3.49648 4.24104C3.00186 3.74568 3.74379 3.00264 4.23841 3.498Z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                              <span
                                class="FormError--error"
                              >
                                validation.nameRequired
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="bp3-form-group"
                    data-id="null-1"
                  >
                    <label
                      class="bp3-label"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="gitSyncRepoForm_gitConnector"
                      >
                        selectGitConnectorTypeLabel
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                        data-testid="cr-field-gitConnector"
                        style="width: 350px;"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          <span
                            class="placeholder"
                          >
                            select
                          </span>
                        </span>
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start"
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <div
                        class="bp3-form-group bp3-intent-danger noSpacing"
                        data-id="repo-2"
                      >
                        <label
                          class="bp3-label"
                          for="repo"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="gitSyncRepoForm_repo"
                          >
                            common.repositoryName
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group bp3-intent-danger"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="repo"
                              type="text"
                              value=""
                            />
                          </div>
                          <div
                            class="bp3-form-helper-text"
                          >
                            <div
                              class="FormError--errorDiv"
                              data-name="repo"
                            >
                              <span
                                class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                                data-icon="circle-cross"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 13 13"
                                  width="12"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M0.166687 6.5013C0.166687 9.99911 3.00222 12.8346 6.50002 12.8346C9.99782 12.8346 12.8334 9.99911 12.8334 6.5013C12.8334 3.0035 9.99782 0.167969 6.50002 0.167969C3.00222 0.167969 0.166687 3.0035 0.166687 6.5013ZM4.23841 3.498L6.49799 5.76096L8.76198 3.49767C9.25705 3.00275 9.99831 3.74646 9.50325 4.24137L7.23992 6.504L9.49411 8.76157C9.98873 9.25693 9.2468 9.99996 8.75218 9.5046L6.49732 7.24638L4.23807 9.50494C3.74301 9.99985 3.00174 9.25615 3.49681 8.76123L5.75539 6.50334L3.49648 4.24104C3.00186 3.74568 3.74379 3.00264 4.23841 3.498Z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                              <span
                                class="FormError--error"
                              >
                                common.validation.repositoryName
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--padding-top-xsmall StyledProps--padding-bottom-medium StyledProps--color StyledProps--color-grey250"
                        style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
                        title=""
                      >
                        
                      </p>
                    </div>
                  </div>
                  <div
                    class="bp3-form-group placeholder"
                    data-id="rootfolder-3"
                  >
                    <label
                      class="bp3-label"
                      for="rootfolder"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="gitSyncRepoForm_rootfolder"
                      >
                        gitsync.selectHarnessFolder
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="rootfolder"
                          placeholder="/folder1/folder2"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-top-xsmall StyledProps--padding-bottom-medium StyledProps--color StyledProps--color-grey250"
                    style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
                    title="/.harness/"
                  >
                    /.harness/
                  </p>
                  <div
                    class="Layout--horizontal StyledProps--main"
                  >
                    <div
                      class="bp3-form-group bp3-intent-danger"
                      data-id="branch-4"
                    >
                      <label
                        class="bp3-label"
                        for="branch"
                      >
                        <span
                          class="Tooltip--acenter"
                          data-tooltip-id="gitSyncRepoForm_branch"
                        >
                          gitsync.selectDefaultBranch
                        </span>
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-popover-wrapper Select--main bp3-fill"
                        >
                          <div
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-input-group bp3-intent-danger"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="branch"
                                placeholder="- Select -"
                                style="padding-right: 0px;"
                                type="text"
                                value=""
                              />
                              <span
                                class="bp3-input-action"
                              >
                                <span
                                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                  icon="chevron-down"
                                >
                                  <svg
                                    data-icon="chevron-down"
                                    height="14"
                                    viewBox="0 0 16 16"
                                    width="14"
                                  >
                                    <desc>
                                      chevron-down
                                    </desc>
                                    <path
                                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-form-helper-text"
                        >
                          <div
                            class="FormError--errorDiv"
                            data-name="branch"
                          >
                            <span
                              class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                              data-icon="circle-cross"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 13 13"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M0.166687 6.5013C0.166687 9.99911 3.00222 12.8346 6.50002 12.8346C9.99782 12.8346 12.8334 9.99911 12.8334 6.5013C12.8334 3.0035 9.99782 0.167969 6.50002 0.167969C3.00222 0.167969 0.166687 3.0035 0.166687 6.5013ZM4.23841 3.498L6.49799 5.76096L8.76198 3.49767C9.25705 3.00275 9.99831 3.74646 9.50325 4.24137L7.23992 6.504L9.49411 8.76157C9.98873 9.25693 9.2468 9.99996 8.75218 9.5046L6.49732 7.24638L4.23807 9.50494C3.74301 9.99985 3.00174 9.25615 3.49681 8.76123L5.75539 6.50334L3.49648 4.24104C3.00186 3.74568 3.74379 3.00264 4.23841 3.498Z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <span
                              class="FormError--error"
                            >
                              validation.branchName
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-top-small StyledProps--padding-left-xlarge"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main formButton StyledProps--intent-primary Button--with-current-color"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    save
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main formButton StyledProps--margin-left-medium Button--with-current-color"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    cancel
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
        style="width: 40%;"
      >
        <div
          class="Layout--vertical StyledProps--main helpText StyledProps--background-grey100 StyledProps--padding-xxlarge"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--padding-bottom-xxxlarge"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="help"
            >
              <svg
                fill="none"
                height="28"
                width="28"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M.488 8.325a3.694 3.694 0 015.225 0 3.694 3.694 0 015.224 0 3.694 3.694 0 015.225 0 7.837 7.837 0 10-15.674 0z"
                  fill="#ADEEFA"
                />
                <path
                  d="M8.325.488c-1.443 0-2.613 3.508-2.613 7.836v.001a3.694 3.694 0 015.227-.001c0-4.328-1.17-7.836-2.614-7.836z"
                  fill="#FF7D97"
                />
                <path
                  d="M4.81 13.574h7.03c1.08 0 1.954.875 1.954 1.953v7.032a1.953 1.953 0 01-1.953 1.953H4.81a1.953 1.953 0 01-1.954-1.953v-7.032c0-1.078.875-1.953 1.954-1.953z"
                  fill="#FFEC80"
                />
                <path
                  d="M6.373 17.385v-3.81h3.906v3.81l-1.953-1.4-1.953 1.4z"
                  fill="#fff"
                />
                <path
                  d="M16.65 8.325C16.65 3.735 12.916 0 8.325 0 3.735 0 0 3.735 0 8.325c0 .153.071.293.187.384l5.584 4.377H4.81a2.444 2.444 0 00-2.442 2.441v1.319a.488.488 0 00.977 0v-1.319c0-.807.657-1.464 1.465-1.464h1.074v3.322a.488.488 0 00.773.397l1.669-1.196 1.669 1.196a.488.488 0 00.772-.397v-3.323h1.074c.808 0 1.465.658 1.465 1.465v7.032c0 .807-.657 1.464-1.465 1.464H4.81a1.466 1.466 0 01-1.465-1.464V21.24a.488.488 0 00-.977 0v1.319A2.444 2.444 0 004.81 25h7.03a2.444 2.444 0 002.442-2.441v-7.032a2.444 2.444 0 00-2.441-2.441h-.962l5.584-4.377a.488.488 0 00.187-.384zm-1.048-1.033a4.199 4.199 0 00-4.195.054c-.072-1.776-.339-3.423-.77-4.717-.206-.617-.429-1.095-.657-1.464a7.368 7.368 0 015.621 6.127zM8.325.977c.337 0 .902.513 1.385 1.961.399 1.195.647 2.725.72 4.385a4.184 4.184 0 00-4.209 0c.072-1.66.32-3.19.72-4.385C7.422 1.49 7.987.977 8.324.977zm2.025 7.475l-2.024 4.613L6.3 8.451a3.212 3.212 0 014.05 0zm-5.045.159l1.918 4.372-5.96-4.671a3.21 3.21 0 014.042.299zm6.043-.002a3.21 3.21 0 014.04-.297l-5.959 4.67 1.919-4.373zM6.67 1.165c-.228.369-.45.847-.656 1.464-.432 1.294-.699 2.941-.771 4.717a4.199 4.199 0 00-4.194-.054A7.368 7.368 0 016.67 1.165zm3.12 15.27l-1.18-.847a.488.488 0 00-.569 0l-1.18.846v-2.372h2.93v2.372z"
                  fill="#6B6D85"
                />
                <path
                  d="M11.646 22.64a.488.488 0 100-.976h-1.514a.488.488 0 000 .976h1.514zm-8.79-3.109a.492.492 0 00.489-.488.492.492 0 00-.489-.488.492.492 0 00-.488.488.492.492 0 00.488.488z"
                  fill="#6B6D85"
                />
              </svg>
            </span>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey700"
              >
                gitsync.harnessFolderHeader
              </p>
              <p
                class="StyledProps--font StyledProps--main"
              >
                 
                gitsync.harnessFolderText
              </p>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="help"
            >
              <svg
                fill="none"
                height="28"
                width="28"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M.488 8.325a3.694 3.694 0 015.225 0 3.694 3.694 0 015.224 0 3.694 3.694 0 015.225 0 7.837 7.837 0 10-15.674 0z"
                  fill="#ADEEFA"
                />
                <path
                  d="M8.325.488c-1.443 0-2.613 3.508-2.613 7.836v.001a3.694 3.694 0 015.227-.001c0-4.328-1.17-7.836-2.614-7.836z"
                  fill="#FF7D97"
                />
                <path
                  d="M4.81 13.574h7.03c1.08 0 1.954.875 1.954 1.953v7.032a1.953 1.953 0 01-1.953 1.953H4.81a1.953 1.953 0 01-1.954-1.953v-7.032c0-1.078.875-1.953 1.954-1.953z"
                  fill="#FFEC80"
                />
                <path
                  d="M6.373 17.385v-3.81h3.906v3.81l-1.953-1.4-1.953 1.4z"
                  fill="#fff"
                />
                <path
                  d="M16.65 8.325C16.65 3.735 12.916 0 8.325 0 3.735 0 0 3.735 0 8.325c0 .153.071.293.187.384l5.584 4.377H4.81a2.444 2.444 0 00-2.442 2.441v1.319a.488.488 0 00.977 0v-1.319c0-.807.657-1.464 1.465-1.464h1.074v3.322a.488.488 0 00.773.397l1.669-1.196 1.669 1.196a.488.488 0 00.772-.397v-3.323h1.074c.808 0 1.465.658 1.465 1.465v7.032c0 .807-.657 1.464-1.465 1.464H4.81a1.466 1.466 0 01-1.465-1.464V21.24a.488.488 0 00-.977 0v1.319A2.444 2.444 0 004.81 25h7.03a2.444 2.444 0 002.442-2.441v-7.032a2.444 2.444 0 00-2.441-2.441h-.962l5.584-4.377a.488.488 0 00.187-.384zm-1.048-1.033a4.199 4.199 0 00-4.195.054c-.072-1.776-.339-3.423-.77-4.717-.206-.617-.429-1.095-.657-1.464a7.368 7.368 0 015.621 6.127zM8.325.977c.337 0 .902.513 1.385 1.961.399 1.195.647 2.725.72 4.385a4.184 4.184 0 00-4.209 0c.072-1.66.32-3.19.72-4.385C7.422 1.49 7.987.977 8.324.977zm2.025 7.475l-2.024 4.613L6.3 8.451a3.212 3.212 0 014.05 0zm-5.045.159l1.918 4.372-5.96-4.671a3.21 3.21 0 014.042.299zm6.043-.002a3.21 3.21 0 014.04-.297l-5.959 4.67 1.919-4.373zM6.67 1.165c-.228.369-.45.847-.656 1.464-.432 1.294-.699 2.941-.771 4.717a4.199 4.199 0 00-4.194-.054A7.368 7.368 0 016.67 1.165zm3.12 15.27l-1.18-.847a.488.488 0 00-.569 0l-1.18.846v-2.372h2.93v2.372z"
                  fill="#6B6D85"
                />
                <path
                  d="M11.646 22.64a.488.488 0 100-.976h-1.514a.488.488 0 000 .976h1.514zm-8.79-3.109a.492.492 0 00.489-.488.492.492 0 00-.489-.488.492.492 0 00-.488.488.492.492 0 00.488.488z"
                  fill="#6B6D85"
                />
              </svg>
            </span>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey700"
              >
                connecectorHelpHeader
              </p>
              <p
                class="StyledProps--font StyledProps--main"
              >
                 
                connecectorHelpText
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
